<resources>
    <string name="login">INICIO DE SESIÓN</string>
    <string name="introduce_username">Introduce tu Nombre de Usuario:</string>
    <string name="username">Usuario</string>
    <string name="introduce_password">Introduce tu Clave:</string>
    <string name="password">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_button">Registro</string>
    <string name="inspired">Inspirado en stewardle.com</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="app_name">STEWARDLE</string>
    <string name="title">Stewardle</string>
    <string name="driver">Piloto</string>
    <string name="flag">Bandera</string>
    <string name="team">Equipo</string>
    <string name="number">Numero</string>
    <string name="age">Edad</string>
    <string name="debut">Debut</string>
    <string name="wins">Victorias</string>
    <string name="hint_driver">Introduce un piloto</string>
    <string name="check">Comprobar</string>
    <string name="game_over">Perdiste. El piloto era </string>
    <string name="you_win">Acertaste!! En</string>
    <string name="playAgain">Volver a jugar</string>
    <string name="dark_mode">Modo oscuro</string>
    <string name="dark_mode_summ">Activa o desactiva el modo oscuro</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_game">Jugar</string>
    <string name="action_stats">Estadísticas</string>
    <string name="action_ranking">Ranking</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="language">Idioma</string>
    <string name="language_summ">Cambia el idioma</string>
    <string name="language_dialog">Seleciona el idioma</string>
    <string name="attempts">intentos</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="tutorial_introduction">Tienes que adivinar el piloto en 6 intentos.\n\n En cada intento se deberá elegir un piloto del desplegable, solo se muestran pilotos que hayan corrido desde la temporada de 2014 hasta la actualidad.\n\n Después de seleccionar un piloto el color de los recuadros cambiará, siguiendo el patrón que se muestra en el ejemplo inferior</string>
    <string name="example">EJEMPLO:</string>
    <string name="tutorial_nationality">El piloto es de nacionalidad española</string>
    <string name="tutorial_team">El piloto no ha corrido para Ferrari</string>
    <string name="tutorial_previous_team">El piloto ha corrido previamente para Williams</string>
    <string name="tutorial_low_number">El número del piloto es demasiado bajo</string>
    <string name="tutorial_high_number">El número del piloto es demasiado alto</string>
    <string name="stats_title">ESTADÍSTICAS</string>
    <string name="stats_played">JUGADAS: </string>
    <string name="stats_won">GANADAS: </string>
    <string name="stats_lost">PERDIDAS: </string>
    <string name="ranking_title">RANKING</string>
    <string name="actual_user">El usuario actual</string>
    <string name="position">está en la posición</string>
    <string-array name="languages_entries">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>

    <string-array name="languages_values">
        <item>es</item> <!-- Valor para Inglés -->
        <item>en</item> <!-- Valor para Español -->
        <!-- Agrega más valores según sea necesario -->
    </string-array>
</resources>