<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginTop="-100dp"
        android:gravity="center"
        android:src="@drawable/f1logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/text"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/introduce_username"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/introduce_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="90dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="65dp"
        android:backgroundTint="#FF00"
        android:text="@string/login_button"
        android:textColor="@color/text" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FF00"
        android:text="@string/register_button"
        android:textColor="@color/text" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:hint="@string/username" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="750dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/inspired"
        android:textColor="@color/text"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="62dp"
        android:layout_height="66dp"
        android:layout_marginHorizontal="315dp"
        android:layout_marginTop="730dp"
        android:src="@drawable/stewardle" />

</RelativeLayout>
